--- a/publication/network-structure-and-propert-ies-of-crosslinked-bio-based/cite.bib
+++ b/publication/network-structure-and-propert-ies-of-crosslinked-bio-based/cite.bib
@@ -1,6 +1,6 @@
 @article{
   title = {Network structure and properties of crosslinked bio-based epoxy resin composite: An in-silico multiscale strategy with dynamic curing reaction process},
-  author={Yan Wang; Han-Lin Gan; Chi-Xin Liang; Zhong-Yan Zhang; Mo Xie; Ji-Yuan Xing; Yao-Hong Xue; Hong Liu},
+  author={Yan Wang; Han-Lin Gan; Chi-Xin Liang; Zhong-Yan Zhang; Mo Xie; Ji-Yuan Xing; Yao-Hong Xue; Hong Liu*},
   journal = {Giant},
   year    = 2021,
   volume  = 7,
